Turned flyout into fixed element for improved visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ textarea {
 }
 
 .notify {
-  position: absolute;
-  top: 220px;
-  right: 25px;
+  position: fixed;
+  top: 0px;
+  right: 0px;
 }
